fix: drawer overflow

--- a/components/Header/index.module.css
+++ b/components/Header/index.module.css
@@ -74,7 +74,7 @@
 }
 
 .drawer {
-  @apply fixed z-90 top-0 bottom-0 right-0 bg-light-bg;
+  @apply fixed z-90 top-0 bottom-0 right-0 bg-light-bg overflow-auto;
   @apply transition-transform duration-300 p-6 text-light-brown;
 
   width: 300px;
